<resources>
    <string name="app_name">reclamosMunicipales</string>
    <string name="prompt_email">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="str_registrar">Register</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_tabbed">MainTabbedActivity</string>
    <string name="tab_text_1">UPLOAD</string>
    <string name="tab_text_2">CLAIMS</string>
    <string name="tab_text_3">PROFILE</string>
    <string name="action_profile">Profile</string>
    <string name="action_languaje">Languaje Selection</string>
    <string name="action_logout">Logout</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="str_buscar">SEARCH</string>
    <string name="por_estado">BY STATE</string>
    <string name="por_categoria">BY CATEGORY</string>
    <string name="titulo_reclamos">CLAIMS</string>
    <string name="titulo_seleccione_asociado">Choose associated</string>
    <string name="titulo_detalle_reclamo">CLAIM DETAIL</string>
    <string name="str_estado">Status</string>
    <string name="str_suscriptos">Subscribed</string>
    <string name="str_categoria">Category</string>
    <string name="str_muni">Municipality</string>
    <string name="str_descripcion">Description</string>
    <string name="str_ver_publicaciones">SEE POSTS</string>
    <string name="str_publicar">TO POST</string>
    <string name="str_add_asociado">Add associated claim</string>
    <string name="str_desasociar">Disassociate</string>
    <string name="str_comentario">Comment</string>
    <string name="str_fecha">Date</string>
    <string name="reclamo_eliminado">Deleted claim!</string>
    <string name="reclamo_asociado">Associated claim!</string>
    <string name="reclamo_desasociado">Dissociated claim!</string>
    <string name="reintente_asociar">Did not associate, retry</string>
    <string name="reintente_desasociar">Did not dissociate, retry</string>
    <string name="reclamo_encurso">The claim is in progress, check the details in the application</string>
    <string name="reclamo_resuelto">The claim was resolved, verify the details in the application</string>
    <string name="eliminar_reclamo">Do you want to delete the claim?</string>
    <string name="asociar_reclamo">Do you want to associate the claim?</string>
    <string name="desasociar_reclamo">Do you want to dissociate the claim?</string>
    <string name="str_regresar">   BACK </string>
    <string name="str_registrar_titulo">Register User</string>
    <string name="usuario_nombre">Name</string>
    <string name="usuario_apellido">Lastname</string>
    <string name="usuario_email">Email</string>
    <string name="usuario_telefono">Phone</string>
    <string name="usuario_nombre_user">User</string>
    <string name="usuario_password">Password</string>
    <string name="usuario_direccion">Address</string>
    <string name="button_foto">Photo</string>
    <string name="button_registrar">REGISTER</string>
    <string name="seleccione_foto">Choose a photo</string>
    <string name="complete_campos">Complete all fields!</string>
    <string name="email_incorrecto">Invalid e-mail</string>
    <string name="str_registrado">registered</string>
    <string name="ya_existe">It already exists</string>
    <string name="compruebe_usuario">Check user!</string>
    <string name="compruebe_email">Check e-mail!</string>
    <string name="compruebe_telefono">Check phone!</string>
    <string name="title_activity_maps">Map</string>
    <string name="str_estoy_aqui">Here i am!</string>
    <string name="str_idioma_titulo">Select a languaje</string>
    <string name="idioma_ingles">English</string>
    <string name="idioma_español">Spanish</string>
    <string name="idioma_italiano">Italian</string>
    <string name="idioma_japones">Japanese</string>
    <string name="toast_idioma">Language changed!</string>
    <string name="seleccion_idioma">Language</string>
    <string-array name="languages">
        <item>@string/idioma_ingles</item>
        <item>@string/idioma_español</item>
        <item>@string/idioma_italiano</item>
        <item>@string/idioma_japones</item>
    </string-array>
    <string name="seleccione_estado">Select a status</string>
    <string name="str_abierto">Open</string>
    <string name="str_encurso">In progress</string>
    <string name="str_resuelto">Resolved</string>
    <string name="str_reabierto">Re-opened</string>
    <string name="titulo_detalle_publicacion">PUBLICATION DETAIL</string>
    <string name="titulo_publicaciones">CLAIM PUBLICATIONS</string>
    <string name="titulo_publicacion">PUBLICATION</string>
    <string name="ingrese_comentario">Enter a comment...</string>
    <string name="actualice_estado">Update status: </string>
    <string name="tomar_foto">Take a photo</string>
    <string name="enviar_publicacion">UPLOAD PUBLICATION</string>
    <string name="eliminar_publicacion">Do you want to delete the publication?</string>
    <string name="publicacion_eliminada">Deleted publication!</string>
    <string name="debe_escribir_comentario">You must write a comment!</string>
    <string name="debe_tomar_foto">You must take a picture!</string>
    <string name="publicacion_subida">Uploaded publication </string>
    <string name="str_confirmar">Yes</string>
    <string name="str_cancelar">No</string>
    <string name="str_carga_lista">Loading list... </string>
    <string name="str_actualizando">Updating... </string>
    <string name="str_eliminando">Removing...</string>
    <string name="str_espere">Please wait...</string>
    <string name="str_buscando">Searching...</string>
    <string name="str_cargando">Loading...</string>
    <string name="enviando_mail">Sending e-mail...</string>
    <string name="perfil_usuario">USER PROFILE</string>
    <string name="actualizar_foto">Update photo</string>
    <string name="actualizar_perfil">Update profile</string>
    <string name="str_name">Name</string>
    <string name="str_lastname">Lastname</string>
    <string name="str_mail">E-mail</string>
    <string name="str_phone">Phone</string>
    <string name="str_address">Address</string>
    <string name="str_user">User</string>
    <string name="str_pass">Password</string>
    <string name="confirmacion_actualizar_perfil">Do you want to update your profile data?</string>
    <string name="confirmacion_actualizar_foto">Do you want to update your profile photo?</string>
    <string name="foto_actualizada">Photo updated!</string>
    <string name="perfil_actualizado">Profile data updated!</string>
    <string name="server_error">Server error</string>
    <string name="sin_conexion">No connection to the server</string>
    <string name="str_welcome">Welcome </string>
    <string name="login_error">There was an error when logging in</string>
    <string name="str_reintente">ERROR...Retry</string>
    <string name="rol_incorrecto">Wrong role, retry!</string>
    <string name="mantener_boton">Press and hold to save the image</string>
    <string name="eliminar_suscripcion">Deleted subscription!</string>
    <string name="suscripcion_no_eliminada">Error: Subscription not deleted</string>
    <string name="imagen_guardada">Image was saved in gallery</string>
    <string name="str_logout">Logged-out user!</string>
    <string name="mail_exito">Successfully sent mail!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_respuesta_reclamo">RespuestaReclamoActivity</string>
</resources>