<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient"

    tools:context="com.example.bruno.debarrio.LoginActivity">

    <!-- App Bar -->
    <android.support.design.widget.AppBarLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"> <!-- Toolbar -->
    </android.support.design.widget.AppBarLayout>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_user_widget"
        android:layout_below="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="185dp"
        android:textColorHint="@color/colorGris">

        <AutoCompleteTextView
            android:id="@+id/edit_usuario_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_action_user"
            android:drawableStart="@drawable/ic_action_user"
            android:layout_marginBottom="20dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorBlanco"
            android:textColorHint="@color/colorGris" />

    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/edit_password_login"
        android:layout_width="match_parent"
        android:layout_height="49dp"

        android:layout_below="@+id/edit_user_widget"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_pass"
        android:drawableStart="@drawable/ic_action_pass"
        android:hint="@string/prompt_password"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/colorBlanco"
        android:textColorHint="@color/colorGris" />


    <TextView
        android:id="@+id/textview_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:text="@string/str_registrar"
        android:textColor="@color/colorLightBlue"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="175dp"
        android:layout_height="177dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        app:srcCompat="@drawable/logo" />

    <android.support.v7.widget.CardView
        android:id="@+id/boton_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/colorLightBlue"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/action_sign_in_short"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/seleccionIdioma"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_above="@+id/textview_registrar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:background="@color/colorAccent"
        android:text="@string/seleccion_idioma" />

</RelativeLayout>
